--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <version>6.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.13.0</version>
+        </dependency>
+
     </dependencies>
 
 
